--- a/depenses.html
+++ b/depenses.html
@@ -352,9 +352,9 @@
     <div class="container">
         <div class="main-content">
             <div class="header">
-                <button class="back-button" onclick="window.location.href='patrimoine.html'">
+                <button class="back-button" onclick="window.location.href='index.html'">
                     <span class="material-icons">arrow_back</span>
-                    Retour
+                    Retour à la carte
                 </button>
                 <h1 id="asset-reference"></h1>
             </div>
