Add charges evolution graph page

--- a/depenses.html
+++ b/depenses.html
@@ -365,7 +365,7 @@
             </div>
 
             <div class="summary">
-                <div class="summary-card">
+                <div class="summary-card" style="cursor: pointer;" onclick="window.location.href='graphique.html'">
                     <div class="summary-title">Montant total des charges <span id="selected-year">2025</span></div>
                     <div class="summary-amount" id="total-charges">0 €</div>
                 </div>
